# repo-maintainer-agent

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  run.sh  slack-app-manifest.yml
app/: config.py  db.py  devin_client.py  evaluator.py  gh_token.py  github_poller.py  ingest.py  issue_comments.py  logging_utils.py  main.py  mcp_server.py  notifier.py  scanner.py  slack_bot.py  state.py  telemetry.py  worker.py
static/: index.html
tests/: conftest.py  test_gh_token.py  test_github_poller.py  test_issue_comments.py  test_merge_policy.py  test_notifier.py  test_slack_bot.py  test_state.py  test_worker.py
